    seen any attribute that's boolean in one tag but non-boolean in another
    tag.
  * 'HTMLBuilder' has several literal constants as class attributes: EMPTY,
    SPACE, TAB2, TAB4, NL, BR, NL2, BR2.
    

  * Bugfixes:
  
    + Convert None to "" when passed to constructor.
    + Pass attribute when raising AttributeError.

  * Implementation changes:

    + '.comment()' is now a regular method.
    + Replace UnfinishedTag with functools.partial.
    + Delete UnfinishedComment, UnfinishedLiteral, UnfinishedTag.
    + Refactor methods to call self instead of doing ad hoc joins.
    + Merge 'make_tag()' into 'HTMLBuilder.tag()'. Make it call 'self' rather
      than joining strings.
    + Move 'empty_tags' to 'HTMLBuilder.void_tags'.
    + Move part of 'format_attrs()' to 'HTMLBuilder.optimize_attrs()', and
      merge '_attr_decode()' into it, and also None value handling. Move the
      compose dict local variable to a class attribute 'compose_attrs'.
    + Implement boolean attribute conversion in 'HTMLBuilder.optimize_attrs()'.
    + Refactor 'format_attrs()' to 'HTMLBuilder.render_attrs()'. Change the
      argument to a dict instead of keyword args. Delete the None handling
      because 'HTMLBuilder.optimize_attrs()' now does it.

- webhelpers.html.tags:

    * New class 'Link' is like 'link_to_if' but is lazily evaluated.
    * Delete 'title()'. It's too specific for a general-purpose library.
    * Delete 'xml_declaration()'.
    * Delete 'convert_boolean_attrs()' and 'css_classes()'. The HTML builder
      now does these itself.
    * When 'link_to_if' and 'link_to_unless' return just the label, escape it.
      Tag functions are always supposed to return literals.
    * The 'id_format' argument to the 'ModelTags' constructor now uses "{}"
      string formatting. It still accepts "%s" for backward compatibility and
      converts it to the newer format.
    * Add a space between the widget and the label when rendering 'checkbox()'